# UOSM-Dashboard-SDL

./: .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  UOSM-Dashboard.ioc
.github/workflows/: GoogleTest.yml  documentation.yml
.run/: UOSM-Dashboard-SDL.run.xml
Core/Inc/: UOSMCoreConfig.h  doxygen.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Modules/: CANCallbacks.c
Core/Src/: UOSMCoreConfig.c  main.c  stm32f7xx_hal_msp.c
Core/Tasks/: InternalCommsTask.c  InternalCommsTask.h  LVGLTimerTask.h  TaskManager.c  TaskManager.h
Core/UI/: HomeView.cpp  HomeView.hpp  LightStyles.cpp  LightStyles.hpp  StatsView.cpp  StatsView.hpp  StatsViewModel.cpp  StylesManager.cpp  StylesManager.hpp  application.cpp  application.h
Core/UI/Data/: DataAggregatorWrapper.cpp  DataAggregatorWrapper.h
Core/UI/Utils/: Styles.hpp  ViewModel.cpp
Documentation/: CodeStyle.md  Main.md  ToDo.md
Drivers/Components/otm8009a/: otm8009a.c
Drivers/Fonts/: sf_144.c
Drivers/STM32F769I-Discovery/: stm32f769i_discovery_lcd.h
Drivers/tft/: tft.c
Drivers/touchpad/: touchpad.c
UOSM-Core/: README.md  library.json
UOSM-Core/Drivers/: CANDriver.c  MCP2515.c  MCP2515.h  SerialDebugDriver.c
UOSM-Core/Inc/: ApplicationTypes.h
UOSM-Core/Modules/: InternalCommsModule.c
UOSM-Core/Utils/: CANLogEntry.hpp  DataQueue.hpp  Identifiable.cpp  Identifiable.hpp  Observable.hpp  ObservedObject.hpp
UOSM-Dashboard/: .cproject  .mxproject  CMakeLists_template.txt  Doxyfile
UOSM-Dashboard/Core/Inc/: lv_conf.h
UOSM-Dashboard/Core/Modules/: CANCallbacks.c  CANCallbacks.h
UOSM-Dashboard/Core/Src/: main.c  stm32f7xx_it.c
UOSM-Dashboard/Core/Tasks/: InternalCommsTask.c  LVGLTimerTask.c
UOSM-Dashboard/Core/UI/: Constants.h  HomeView.cpp  HomeView.hpp  HomeViewModel.cpp  HomeViewModel.hpp  LightStyles.cpp  LightStyles.hpp  LogView.cpp  LogView.hpp  StatsView.cpp  StatsView.hpp  StatsViewModel.hpp  application.cpp
UOSM-Dashboard/Core/UI/Components/: BarChart.cpp  BarChart.hpp  Chart.hpp
UOSM-Dashboard/Core/UI/Data/: DataAggregator.hpp  DataAggregatorWrapper.cpp  DataAggregatorWrapper.h  DataAggregatorWrapperType.h
UOSM-Dashboard/Core/UI/Utils/: CombineLatest.hpp  Styles.hpp  View.cpp  View.hpp  ViewModel.hpp  montserrat_72.c
UOSM-Dashboard/Documentation/: Architecture.md
UOSM-Dashboard/Drivers/STM32F769I-Discovery/: stm32f769i_discovery_lcd.c
UOSM-Dashboard/UOSM-Core/Drivers/: CANDriver.h  SerialDebugDriver.h
UOSM-Dashboard/UOSM-Core/Inc/: ApplicationTypes.h
UOSM-Dashboard/UOSM-Core/Modules/: CANMessageLookUpModule.c  CANMessageLookUpModule.h  InternalCommsModule.h
UOSM-Dashboard/UOSM-Core/Utils/: CANLogEntry.hpp  DataQueue.hpp  Identifiable.cpp  Identifiable.hpp  ObservedDataQueue.hpp
main/src/: main.c
test/: BarDataCollectionTests.cpp  CombineLatestTests.cpp  DataQueueTests.cpp  IdentifiableTests.cpp  ObservedObjectTests.cpp
